--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,7 +103,7 @@
 .sign_btn:hover {
      background: radial-gradient(circle, rgba(122,112,122,1) 0%, rgba(87,77,88,1) 65%, rgba(94,85,92,1) 91%);
 }
-.sign_btn {
+.link_btn {
      width: 90%;
      height: 50px;
      display: flex;
