--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,7 +119,7 @@
      margin-bottom: 10px;
 }
 .link_btn:hover {
-     background: radial-gradient(circle, rgb(248, 219, 248) 0%, rgba(87,77,88,1) 65%, rgba(94,85,92,1) 91%);
+     background-image: url(../img/ok.png);
 }
  .tel_icon {
      background-image: url(../img/tel.png);
