--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+@media (max-width: 1200px) {
+.wrapper { 
+     width: 100%;
+     margin: 0 auto;
+}
+}
 .wrapper { 
      width: 600px;
      margin: 0 auto;
