--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,7 +137,7 @@
  }
 .info_maps_box {
      width: 90%;
-     height: 50px;
+     padding: 10px;
      display: flex;
      flex-direction: column;
      border-radius: 10px;
@@ -146,18 +146,20 @@
 .info_bold_txt {
      color: black;
      font-weight: bold;
+     position: relative;
+     margin-left: 30px;
 }
 .info_bold_txt::before {
      content: "";
-     left: 0;
+     left: -25px;
      top: 0;
-     width: 30px;
-     height: 30px;
+     width: 20px;
+     height: 20px;
      position: absolute;
      background-repeat: no-repeat;
      background-position: center;
      background-size: 100px;
-     background-image: url(../img/wa.png);
+     background-image: url(../img/maps.png);
 }
  @media (max-width: 600px) {
 .wrapper { 
