--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,18 +148,22 @@
      font-weight: bold;
      position: relative;
      margin-left: 30px;
+     margin-bottom: 10px;
 }
 .info_bold_txt::before {
      content: "";
      left: -25px;
      top: 0;
-     width: 20px;
-     height: 20px;
+     width: 15px;
+     height: 15px;
      position: absolute;
      background-repeat: no-repeat;
      background-position: center;
-     background-size: 100px;
+     background-size: contain;
      background-image: url(../img/maps.png);
+}
+.info_address_btn {
+     margin-bottom: 10px;
 }
  @media (max-width: 600px) {
 .wrapper { 
