--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,7 +227,12 @@
 }
 .form_txt_info {
      width: 100%;
-     text-align: center;
+     height: 50px;
+     display: flex;
+     background: radial-gradient(circle, rgba(112,6,110,1) 0%, rgba(116,9,121,1) 65%, rgba(126,18,95,1) 91%);
+     color: white;
+     align-items: center;
+     justify-content: center;
 }
 .radio_chose {
      margin-right: 10px;
