--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,6 +202,7 @@
      flex-direction: column;
      border-radius: 10px;
      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+     margin: 10px auto 0;
 }
 .form_input {
      margin-bottom: 10px;
@@ -241,6 +242,16 @@
      padding: 10px;
      display: flex;
      flex-direction: column;
+}
+.form_button {
+     width: 100%;
+     height: 50px;
+     display: flex;
+     background: radial-gradient(circle, rgba(112, 6, 110, 1) 0%, rgba(116, 9, 121, 1) 65%, rgba(126, 18, 95, 1) 91%);
+     color: white;
+     align-items: center;
+     justify-content: center;
+     border: none;
 }
  @media (max-width: 600px) {
 .wrapper { 
