--- a/static/css/style.css
+++ b/static/css/style.css
@@ -253,6 +253,9 @@
      justify-content: center;
      border: none;
 }
+.chose_radio:hover{
+     background: radial-gradient(circle, rgba(112, 6, 110, 1) 0%, rgba(116, 9, 121, 1) 65%, rgba(126, 18, 95, 1) 91%);
+}
  @media (max-width: 600px) {
 .wrapper { 
      width: 100%;
