--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,6 +268,10 @@
 .chose_radio:hover{
      background: radial-gradient(circle, rgba(112, 6, 110, 0.3) 0%, rgba(116, 9, 121, 0.3) 65%, rgba(126, 18, 95, 0.3) 91%);
 }
+.form_message {
+     resize: none;
+     height: 70px;
+}
  @media (max-width: 600px) {
 .wrapper { 
      width: 100%;
