--- a/static/css/style.css
+++ b/static/css/style.css
@@ -272,6 +272,32 @@
      resize: none;
      height: 70px;
 }
+.box_report {
+     display: flex;
+     flex-direction: column;
+     width: 90%;
+     border-bottom: 2px solid rgba(116, 9, 121);
+     margin-bottom: 10px;
+     padding-bottom: 10px;
+}
+.user_report_about_box {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+}
+.user_report_box {
+     display: flex;
+     align-items: center;
+}
+.user_report_avatar {
+     height: 25px;
+     width: 25px;
+     border-radius: 50%;
+     margin-right: 8px;
+     background-image: url(../img/user.png);
+     background-repeat: no-repeat;
+     background-size: cover;
+}
  @media (max-width: 600px) {
 .wrapper { 
      width: 100%;
